fixing alignment problem on mainbar

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -44,6 +44,7 @@ a {
 
 .menu-logo {
 	float: left;
+	margin: 0 auto;
 	width: 32px;
 	height: 32px;
 }
